#6 fix some bugs in base logic and added some new logic, enum types in bd has removed, added ExceptionApiHandler and custom exception, added type for product and material, added index to materials storage and products storage for updating available quantity in storage
